Add some missing publications

--- a/cv/mypapers.bib
+++ b/cv/mypapers.bib
@@ -1,15 +1,3 @@
-@article{lydeamoreBiologicalModelScabies2018,
-  title = {A Biological Model of Scabies Infection Dynamics and Treatment Informs Mass Drug Administration Strategies to Increase the Likelihood of Elimination},
-  author = {Lydeamore, M. J. and Campbell, P. T. and Regan, D. G. and Tong, S. Y. C. and Andrews, R. M. and Steer, A. C. and Romani, L. and Kaldor, J. M. and McVernon, J. and McCaw, J. M.},
-  year = {2018},
-  month = aug,
-  journal = {Mathematical Biosciences},
-  issn = {0025-5564},
-  doi = {10.1016/j.mbs.2018.08.007},
-  urldate = {2018-11-22},
-  abstract = {Infections with Sarcoptes scabiei, or scabies, remain common in many disadvantaged populations. Mass drug administration (MDA) has been used in such settings to achieve a rapid reduction in infection and transmission, with the goal of eliminating the public health burden of scabies. While prevalence has been observed to fall substantially following such an intervention, in some instances resurgence of infection to baseline levels has occurred over several years. To explore the biology underpinning this phenomenon, we have developed a theoretical model of scabies life-cycle and transmission dynamics in a homogeneously mixing population, and simulate the impact of mass drug treatment strategies acting on egg and mite life cycle stages (ovicidal) or mites alone (non-ovicidal). In order to investigate the dynamics of the system, we first define and calculate the optimal interval between treatment doses. We calculate the probability of eradication as a function of the number of optimally-timed successive treatment doses and the number of years over which a program is run. For the non-ovicidal intervention, we first show that at least two optimally-timed doses are required to achieve eradication. We then demonstrate that while more doses over a small number of years provides the highest chance of eradication, a similar outcome can be achieved with fewer doses delivered annually over a longer period of time. For the ovicidal intervention, we find that doses should be delivered as close together as possible. This work provides a platform for further research into optimal treatment strategies which may incorporate heterogeneity of transmission, and the interplay between MDA and enhancement of continuing scabies surveillance and treatment strategies.},
-  file = {/Users/mlyd0001/Zotero/storage/V3NQKT9Y/Lydeamore et al. - 2018 - A biological model of scabies infection dynamics a.pdf;/Users/mlyd0001/Zotero/storage/EPSPGKCM/S0025556416303649.html}
-}
 @misc{conwayCOVID19VaccineCoverage2022,
   title = {{{COVID-19}} Vaccine Coverage Targets to Inform Reopening Plans in a Low Incidence Setting},
   author = {Conway, Eamon and Walker, Camelia and Baker, Chris and Lydeamore, Michael and Ryan, Gerard E. and Campbell, Trish and Miller, Joel C. and Yeung, Max and Kabashima, Greg and Wood, James and Rebuli, Nic and McCaw, James M. and McVernon, Jodie and Golding, Nick and Price, David J. and Shearer, Freya M.},
@@ -43,6 +31,23 @@
   file = {/Users/mlyd0001/Zotero/storage/7VHTUCL5/Conway et al. - 2023 - COVID-19 vaccine coverage targets to inform reopen.pdf}
 }
 
+@misc{conwayOptimalTimingBooster2024,
+  title = {Optimal Timing of Booster Doses in a Highly Vaccinated Population with Minimal Natural Exposure to {{COVID-19}}},
+  author = {Conway, Eamon and Walker, Camelia and Lydeamore, Michael and Golding, Nick and Ryan, Gerard and Mavec, Dario and Oates, James and Kabashima, Greg and Price, David J. and Shearer, Freya and Cromer, Deborah and Davenport, Miles P. and McCaw, James and Eriksson, Emily M. and Hodgkin, Philip D. and Wu, Logan and Le, Thao P. and Baker, Christopher M. and Mueller, Ivo and McVernon, Jodie},
+  year = {2024},
+  month = may,
+  pages = {2024.05.14.24307386},
+  publisher = {medRxiv},
+  issn = {2430-7386},
+  doi = {10.1101/2024.05.14.24307386},
+  urldate = {2024-06-24},
+  abstract = {Population-level waning of protection following immunising exposures is an important determinant of susceptibility to COVID-19 outbreaks. This work outlines an individual-based model (IBM) for the transmission and clinical impact of SARS-CoV-2 that explicitly represents the immunological response to vaccination and infection of each individual. The IBM evaluates waning of immunity to inform risk of infection and related clinical outcomes across a large freely mixing population over time by age and prior exposure status. Modelling immunological responses allows us to investigate the likely impact of immune escape variants based on the landscape in which they emerge. The model described in this paper was motivated by the need to anticipate health and societal impacts of COVID-19 in Australia following emergence of the Omicron variant, in the context of high national vaccine uptake but low infection exposure. It provides a flexible framework for modelling policy-relevant scenarios to inform preparedness and response actions as immunity in a population changes through time.},
+  archiveprefix = {medRxiv},
+  copyright = {{\copyright} 2024, Posted by Cold Spring Harbor Laboratory. The copyright holder for this pre-print is the author. All rights reserved. The material may not be redistributed, re-used or adapted without the author's permission.},
+  langid = {english},
+  file = {/Users/mlyd0001/Zotero/storage/NHFJ2X4N/Conway et al. - 2024 - Optimal timing of booster doses in a highly vaccin.pdf}
+}
+
 @article{cuninghamHighBurdenInfectious2019,
   title = {High Burden of Infectious Disease and Antibiotic Use in Early Life in {{Australian Aboriginal}} Communities},
   author = {Cuningham, Will and McVernon, Jodie and Lydeamore, Michael J. and Andrews, Ross M. and Carapetis, Jonathan and Kearns, Therese and Clucas, Danielle and Dhurrkay, Roslyn Gundjirryirr and Tong, Steven Y.C. and Campbell, Patricia T.},
@@ -60,6 +65,40 @@
   file = {/Users/mlyd0001/Zotero/storage/D6W2EU9H/Cuningham et al. - 2019 - High burden of infectious disease and antibiotic u.pdf;/Users/mlyd0001/Zotero/storage/6B2UR7ZW/1753-6405.html}
 }
 
+@misc{leCosteffectiveBoostingAllocations2023,
+  title = {Cost-Effective Boosting Allocations in the Post-{{Omicron}} Era of {{COVID-19}} Management},
+  author = {Le, Thao P. and Conway, Eamon and Akpan, Edifofon and Abell, Isobel and Abraham, Patrick and Baker, Christopher M. and Campbell, Patricia T. and Cromer, Deborah and Lydeamore, Michael J. and McDonough, Yasmine and Mueller, Ivo and Ryan, Gerard and Walker, Camelia and Wang, Yingying and Carvalho, Natalie and McVernon, Jodie},
+  year = {2023},
+  month = nov,
+  pages = {2023.11.14.23298536},
+  publisher = {medRxiv},
+  doi = {10.1101/2023.11.14.23298536},
+  urldate = {2024-06-24},
+  abstract = {Background Following widespread exposure to Omicron variants, COVID-19 has transitioned to endemic circulation. Populations now have diverse infection and vaccination histories, resulting in heterogeneous immune landscapes. Careful consideration of vaccination is required through the post-Omicron phase of COVID-19 management to minimise disease burden. We assess the impact and cost-effectiveness of targeted COVID-19 vaccination strategies to support global vaccination recommendations. Methods We integrated immunological, transmission, clinical and cost-effectiveness models, and simulated populations with different characteristics and immune landscapes. We calculated the expected number of infections, hospitalisations and deaths for different vaccine scenarios. Costs (from a healthcare perspective) were estimated for exemplar country income level groupings in the Western Pacific Region. Results are reported as incremental costs and disability-adjusted life years averted compared to no additional vaccination. Parameter and stochastic uncertainty were captured through scenario and sensitivity analysis. Findings Across different population demographics and income levels, we consistently found that annual elder-targeted boosting strategies are most likely to be cost-effective or cost-saving, while paediatric programs are unlikely to be cost-effective. Results remained consistent while accounting for uncertainties in the epidemiological and economic models. Half-yearly boosting may only be cost-effective in higher income settings with older population demographics and higher cost-effectiveness thresholds. Interpretation The seresults demonstrate the value of continued booster vaccinations to protect against severe COVID-19 disease outcomes across high and middle-income settings and show that the biggest health gains relative to vaccine costs are achieved by targeting older age-groups. Funding Funded by the World Health Organization. Research in contextEvidence before this studyEvidence before this study With COVID-19 now globally endemic, populations exhibit varying levels of natural and vaccine-acquired immunity to SARS-CoV-2. With widespread, if variable, immunity resulting in reduced severity of COVID-19 disease, re-evaluation of the ongoing value of vaccination is required. COVID-19 vaccination strategies must consider the cost-effectiveness of gains from vaccination given prior immunity, and in the context of income and health system capacity to manage COVID-19 alongside other pressing concerns.Few articles examine cost-effectiveness of COVID-19 vaccination strategies in populations with diverse characteristics and waning hybrid immunity, though there is a large body of literature that considers some combination of these elements or focus on one particular country. Consensus is that allocating vaccine doses to older age groups and those at higher risk of severe disease is most beneficial, albeit assuming either only past natural immunity or no waning immunity. These studies have either not included a cost-effectiveness analysis or, where present, have typically assumed a base case zero-vaccination scenario.Added value of this studyAdded value of this study We consider the contemporary situation where populations have varying degrees of hybrid immunity resulting from both prior infection and vaccination, and where the relevant cost-effectiveness analysis considers only future primary and booster doses in the population. We describe multiple demographics, using exemplar `older' and `younger' populations, in conjunction with low to high past vaccination coverage, low to high past natural infection incidence, and low to high income levels. Under these settings, we determine the cost-effectiveness of a range of targeted boosting strategies (who, when, what).Implications of all the available evidenceImplications of all the available evidence Our study highlights how future COVID-19 booster doses targeted towards older age groups at risk of severe outcomes can be cost-effective or cost-saving in high-income settings with populations that have a higher proportion of individuals at risk. In younger, lower-resourced settings, annual boosting of older age groups may still be cost-effective or cost-saving in some scenarios. We consistently find that pediatric vaccination is not cost-effective. Given the benefits of vaccination, especially to reduce severe disease, we show the importance of ongoing global efforts to provide and equitably distribute vaccines and strengthen adult immunisation programs.},
+  archiveprefix = {medRxiv},
+  copyright = {{\copyright} 2023, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NoDerivs 4.0 International), CC BY-ND 4.0, as described at http://creativecommons.org/licenses/by-nd/4.0/},
+  langid = {english},
+  file = {/Users/mlyd0001/Zotero/storage/X6KMQQ4A/Le et al. - 2023 - Cost-effective boosting allocations in the post-Om.pdf}
+}
+
+@article{leModellingImpactHybrid2024,
+  title = {Modelling the Impact of Hybrid Immunity on Future {{COVID-19}} Epidemic Waves},
+  author = {Le, Thao~P. and Abell, Isobel and Conway, Eamon and Campbell, Patricia T. and Hogan, Alexandra B. and Lydeamore, Michael J. and McVernon, Jodie and Mueller, Ivo and Walker, Camelia R. and Baker, Christopher M.},
+  year = {2024},
+  month = apr,
+  journal = {BMC Infectious Diseases},
+  volume = {24},
+  number = {1},
+  pages = {407},
+  issn = {1471-2334},
+  doi = {10.1186/s12879-024-09282-4},
+  urldate = {2024-06-24},
+  abstract = {Since the emergence of SARS-CoV-2 (COVID-19), there have been multiple waves of infection and multiple rounds of vaccination rollouts. Both prior infection and vaccination can prevent future infection and reduce severity of outcomes, combining to form hybrid immunity against COVID-19 at the individual and population level. Here, we explore how different combinations of hybrid immunity affect the size and severity of near-future Omicron waves.},
+  langid = {english},
+  keywords = {Epidemiology,Mathematical modelling,Vaccination,Variants},
+  file = {/Users/mlyd0001/Zotero/storage/FLGQXF8G/Le et al. - 2024 - Modelling the impact of hybrid immunity on future .pdf}
+}
+
 @article{Lydeamore2016,
   title = {Choice of {{Antiviral Allocation Scheme}} for {{Pandemic Influenza Depends}} on {{Strain Transmissibility}}, {{Delivery Delay}} and {{Stockpile Size}}},
   author = {Lydeamore, Michael and Bean, Nigel and Black, Andrew J and Ross, Joshua V},
@@ -70,6 +109,36 @@
   doi = {10.1007/s11538-016-0144-6},
   keywords = {Antivirals,Epidemic,Household model,Pandemic influenza},
   file = {/Users/mlyd0001/Zotero/storage/Q7NJ7B7G/Lydeamore et al. - 2016 - Choice of Antiviral Allocation Scheme for Pandemic Influenza Depends on Strain Transmissibility, Delivery Dela.pdf}
+}
+
+@article{lydeamoreBiologicalModelScabies2018,
+  title = {A Biological Model of Scabies Infection Dynamics and Treatment Informs Mass Drug Administration Strategies to Increase the Likelihood of Elimination},
+  author = {Lydeamore, M. J. and Campbell, P. T. and Regan, D. G. and Tong, S. Y. C. and Andrews, R. M. and Steer, A. C. and Romani, L. and Kaldor, J. M. and McVernon, J. and McCaw, J. M.},
+  year = {2018},
+  month = aug,
+  journal = {Mathematical Biosciences},
+  issn = {0025-5564},
+  doi = {10.1016/j.mbs.2018.08.007},
+  urldate = {2018-11-22},
+  abstract = {Infections with Sarcoptes scabiei, or scabies, remain common in many disadvantaged populations. Mass drug administration (MDA) has been used in such settings to achieve a rapid reduction in infection and transmission, with the goal of eliminating the public health burden of scabies. While prevalence has been observed to fall substantially following such an intervention, in some instances resurgence of infection to baseline levels has occurred over several years. To explore the biology underpinning this phenomenon, we have developed a theoretical model of scabies life-cycle and transmission dynamics in a homogeneously mixing population, and simulate the impact of mass drug treatment strategies acting on egg and mite life cycle stages (ovicidal) or mites alone (non-ovicidal). In order to investigate the dynamics of the system, we first define and calculate the optimal interval between treatment doses. We calculate the probability of eradication as a function of the number of optimally-timed successive treatment doses and the number of years over which a program is run. For the non-ovicidal intervention, we first show that at least two optimally-timed doses are required to achieve eradication. We then demonstrate that while more doses over a small number of years provides the highest chance of eradication, a similar outcome can be achieved with fewer doses delivered annually over a longer period of time. For the ovicidal intervention, we find that doses should be delivered as close together as possible. This work provides a platform for further research into optimal treatment strategies which may incorporate heterogeneity of transmission, and the interplay between MDA and enhancement of continuing scabies surveillance and treatment strategies.},
+  file = {/Users/mlyd0001/Zotero/storage/V3NQKT9Y/Lydeamore et al. - 2018 - A biological model of scabies infection dynamics a.pdf;/Users/mlyd0001/Zotero/storage/EPSPGKCM/S0025556416303649.html}
+}
+
+@misc{lydeamoreBorderQuarantineVaccination2024,
+  title = {Border Quarantine, Vaccination and Public Health Measures to Mitigate the Impact of {{COVID-19}} Importations: A Modelling Study},
+  shorttitle = {Border Quarantine, Vaccination and Public Health Measures to Mitigate the Impact of {{COVID-19}} Importations},
+  author = {Lydeamore, Michael J. and Zachreson, Cameron and Conway, Eamon and Shearer, Freya M. and Baker, Christopher M. and Ross, Joshua V. and Miller, Joel C. and McCaw, James M. and Geard, Nicholas and McVernon, Jodie and Price, David J.},
+  year = {2024},
+  month = apr,
+  pages = {2024.04.22.24305704},
+  publisher = {medRxiv},
+  doi = {10.1101/2024.04.22.24305704},
+  urldate = {2024-06-24},
+  abstract = {We developed a flexible infectious disease model framework that combines a detailed individual-based model of arrival pathways (quarantine model) and an individual-based model of the arrivals environment (community model) to inform border risk assessments. The work was motivated by Australia's desire to safely increase international arrival volumes, which had been heavily constrained since early 2020 as a result of the COVID-19 pandemic. These analyses supported decisions on quarantine and border policy in the context of the Australian government's national reopening plan in late 2021. The quarantine model provides a detailed representation of transmission within quarantine and time-varying infectiousness and test sensitivity within individuals, to characterise the likelihood and infectiousness of breaches from quarantine. The community model subsequently captures the impact these infectious individuals have in the presence of varying vaccination coverage, arrival volumes, public health and social measures (PHSMs) and test-trace-isolate-quarantine system effectiveness in the Australian context. Our results showed that high vaccination coverage would be required to safely reopen with support from ongoing PHSMs, and quarantine pathways have minimal impact on infection dynamics in the presence of existing local transmission. The modelling pipeline we present can be flexibly adapted to a range of scenarios and thus provides a useful framework for generating timely risk assessments in the event of future pandemics.},
+  archiveprefix = {medRxiv},
+  copyright = {{\copyright} 2024, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NonCommercial-NoDerivs 4.0 International), CC BY-NC-ND 4.0, as described at http://creativecommons.org/licenses/by-nc-nd/4.0/},
+  langid = {english},
+  file = {/Users/mlyd0001/Zotero/storage/QUH9VPYV/Lydeamore et al. - 2024 - Border quarantine, vaccination and public health m.pdf}
 }
 
 @article{lydeamoreBurdenFiveHealthcare2022,
@@ -177,6 +246,41 @@
   file = {/Users/mlyd0001/Zotero/storage/WSUFTYS4/McMahon et al. - 2021 - Bringing evidence from press release to the clinic.pdf;/Users/mlyd0001/Zotero/storage/5IIX4V7M/6040702.html}
 }
 
+@article{mitchellIncidenceNosocomialBloodstream2023,
+  title = {The Incidence of Nosocomial Bloodstream Infection and Urinary Tract Infection in {{Australian}} Hospitals before and during the {{COVID-19}} Pandemic: An Interrupted Time Series Study},
+  shorttitle = {The Incidence of Nosocomial Bloodstream Infection and Urinary Tract Infection in {{Australian}} Hospitals before and during the {{COVID-19}} Pandemic},
+  author = {Mitchell, Brett G. and Stewardson, Andrew J. and Kerr, Lucille and Ferguson, John K. and Curtis, Stephanie and Busija, Ljoudmila and Lydeamore, Michael J. and Graham, Kirsty and Russo, Philip L.},
+  year = {2023},
+  month = jul,
+  journal = {Antimicrobial Resistance \& Infection Control},
+  volume = {12},
+  number = {1},
+  pages = {61},
+  issn = {2047-2994},
+  doi = {10.1186/s13756-023-01268-2},
+  urldate = {2024-06-24},
+  abstract = {The COVID-19 pandemic has had a significant impact on healthcare including increased awareness of infection prevention and control (IPC). The aim of this study was to explore if the heightened awareness of IPC measures implemented in response to the pandemic influenced the rates of healthcare associated infections (HAI) using positive bloodstream and urine cultures as a proxy measure.},
+  langid = {english},
+  keywords = {Blood cultures,COVID-19,Healthcare associated infection,Infection prevention,Surveillance,Urine cultures},
+  file = {/Users/mlyd0001/Zotero/storage/QHINFTAE/Mitchell et al. - 2023 - The incidence of nosocomial bloodstream infection .pdf}
+}
+
+@article{shearerEstimatingImpactTest2024,
+  title = {Estimating the Impact of Test--Trace--Isolate--Quarantine Systems on {{SARS-CoV-2}} Transmission in {{Australia}}},
+  author = {Shearer, Freya M. and McCaw, James M. and Ryan, Gerard E. and Hao, Tianxiao and Tierney, Nicholas J. and Lydeamore, Michael J. and Wu, Logan and Ward, Kate and Ellis, Sally and Wood, James and McVernon, Jodie and Golding, Nick},
+  year = {2024},
+  month = jun,
+  journal = {Epidemics},
+  volume = {47},
+  pages = {100764},
+  issn = {1755-4365},
+  doi = {10.1016/j.epidem.2024.100764},
+  urldate = {2024-06-24},
+  abstract = {Background: Australian states and territories used test--trace--isolate--quarantine (TTIQ) systems extensively in their response to the COVID-19 pandemic in 2020-2021. We report on an analysis of Australian case data to estimate the impact of test--trace--isolate--quarantine systems on SARS-CoV-2 transmission. Methods: Our analysis uses a novel mathematical modelling framework and detailed surveillance data on COVID-19 cases including dates of infection and dates of isolation. First, we directly translate an empirical distribution of times from infection to isolation into reductions in potential for onward transmission during periods of relatively low caseloads (tens to hundreds of reported cases per day). We then apply a simulation approach, validated against case data, to assess the impact of case-initiated contact tracing on transmission during a period of relatively higher caseloads and system stress (up to thousands of cases per day). Results: We estimate that under relatively low caseloads in the state of New South Wales (tens of cases per day), TTIQ contributed to a 54\% reduction in transmission. Under higher caseloads in the state of Victoria (hundreds of cases per day), TTIQ contributed to a 42\% reduction in transmission. Our results also suggest that case-initiated contact tracing can support timely quarantine in times of system stress (thousands of cases per day). Conclusion: Contact tracing systems for COVID-19 in Australia were highly effective and adaptable in supporting the national suppression strategy from 2020--21, prior to the emergence of the Omicron variant in November 2021. TTIQ systems were critical to the maintenance of the strong suppression strategy and were more effective when caseloads were (relatively) low.},
+  keywords = {Contact tracing,COVID-19,Modelling,Surveillance data},
+  file = {/Users/mlyd0001/Zotero/storage/33ZY29RD/Shearer et al. - 2024 - Estimating the impact of test–trace–isolate–quaran.pdf}
+}
+
 @article{sullivanPopulationbasedAnalysisEpidemiological2021,
   title = {Population-Based Analysis of the Epidemiological Features of {{COVID-19}} Epidemics in {{Victoria}}, {{Australia}}, {{January}} 2020-{{March}} 2021, and Their Suppression through Comprehensive Control Strategies},
   author = {Sullivan, Sheena G. and Brotherton, Julia ML and Lynch, Brigid M. and Cheung, Allison and Lydeamore, Michael and Stevenson, Mark and Firestone, Simon and Canevari, Jose and Nguyen, Huu Nghia Joey and Carville, Kylie S.},
@@ -237,7 +341,6 @@
   urldate = {2022-04-14},
   file = {/Users/mlyd0001/Zotero/storage/JHSP8UEW/Zachreson et al. - COVID-19 in low-tolerance border quarantine system.pdf}
 }
-
 
 @article{zachresonRiskMappingCOVID192021,
   title = {Risk Mapping for {{COVID-19}} Outbreaks in {{Australia}} Using Mobility Data},
