Add new preprint

--- a/cv/mypapers.bib
+++ b/cv/mypapers.bib
@@ -1,3 +1,19 @@
+@misc{lydeamoreChangesIsolationGuidelines2024,
+  title = {Changes in Isolation Guidelines for {{CPE}} Patients Results in Only a Mild Reduction in Required Hospital Beds},
+  author = {Lydeamore, Michael J. and Wu, David and Donker, Tjibbe and Gorrie, Claire and Higgs, Charlie K. and Easton, Marion and Hennessy, Daneeta and Geard, Nicholas and Howden, Benjamin P. and Cooper, Ben S. and Wilson, Andrew and Peleg, Anton Y. and Stewardson, Andrew J.},
+  year = {2024},
+  month = jul,
+  pages = {2024.07.04.24309973},
+  publisher = {medRxiv},
+  doi = {10.1101/2024.07.04.24309973},
+  urldate = {2024-07-08},
+  abstract = {Carbapenemase-producing Enterobacterales (CPE) are an emerging public health concern globally as they are resistant to a broad spectrum of antibiotics. Colonisation with CPE typically requires patients to be managed under `contact precautions', which creates additional physical bed demands in healthcare facilities. This study examined the potential impact of revised isolation guidelines introduced in late 2023 in Victoria, Australia, that relaxed the requirement for indefinite isolation of CPE-colonised patients in contact precautions, based on admission of CPE-diagnosed cases prior to the guideline change. Our analysis showed that while the changes result in modest savings in the need for dedicated isolation rooms, they could reduce the duration of time individual patients spend in isolation by up to three weeks. However, ongoing investments to expand isolation capacity would still be required to accommodate the rising incidence of CPE.},
+  archiveprefix = {medRxiv},
+  copyright = {{\copyright} 2024, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NoDerivs 4.0 International), CC BY-ND 4.0, as described at http://creativecommons.org/licenses/by-nd/4.0/},
+  langid = {english},
+  file = {/Users/mlyd0001/Zotero/storage/27PKALH3/Lydeamore et al. - 2024 - Changes in isolation guidelines for CPE patients r.pdf}
+}
+
 @misc{conwayCOVID19VaccineCoverage2022,
   title = {{{COVID-19}} Vaccine Coverage Targets to Inform Reopening Plans in a Low Incidence Setting},
   author = {Conway, Eamon and Walker, Camelia and Baker, Chris and Lydeamore, Michael and Ryan, Gerard E. and Campbell, Trish and Miller, Joel C. and Yeung, Max and Kabashima, Greg and Wood, James and Rebuli, Nic and McCaw, James M. and McVernon, Jodie and Golding, Nick and Price, David J. and Shearer, Freya M.},
