Update ARIC paper

--- a/cv/mypapers.bib
+++ b/cv/mypapers.bib
@@ -190,22 +190,23 @@
   file = {/Users/mlyd0001/Zotero/storage/NPL9VQIR/Lydeamore et al. - 2018 - Calculation of the age of the first infection for .pdf;/Users/mlyd0001/Zotero/storage/F6C924SP/76FC8E2D286FE3D1D325883EFF1B7CBA.html}
 }
 
-@misc{lydeamoreCarbapenemaseproducingEnterobacteralesColonisation2024,
-  title = {Carbapenemase-Producing {{Enterobacterales}} Colonisation Status Does Not Lead to More Frequent Admissions: A Linked Patient Study},
-  shorttitle = {Carbapenemase-Producing {{Enterobacterales}} Colonisation Status Does Not Lead to More Frequent Admissions},
-  author = {Lydeamore, Michael J. and Donker, Tjibbe and Wu, David and Gorrie, Claire and Turner, Annabelle and Easton, Marion and Hennessey, Daneeta and Geard, Nic and Howden, Ben P. and Cooper, Ben S. and Wilson, Andrew and Peleg, Anton Y. and Stewardson, Andrew J.},
+@article{lydeamoreCarbapenemaseproducingEnterobacteralesColonisation2024a,
+  title = {Carbapenemase-Producing Enterobacterales Colonisation Status Does Not Lead to More Frequent Admissions: A Linked Patient Study},
+  shorttitle = {Carbapenemase-Producing Enterobacterales Colonisation Status Does Not Lead to More Frequent Admissions},
+  author = {Lydeamore, Michael J. and Donker, Tjibbe and Wu, David and Gorrie, Claire and Turner, Annabelle and Easton, Marion and Hennessy, Daneeta and Geard, Nicholas and Howden, Benjamin P. and Cooper, Ben S. and Wilson, Andrew and Peleg, Anton Y. and Stewardson, Andrew J.},
   year = {2024},
-  month = jan,
-  pages = {2024.01.09.24300945},
-  publisher = {medRxiv},
-  doi = {10.1101/2024.01.09.24300945},
-  urldate = {2024-04-15},
-  abstract = {Background Hospitals in any given region can be considered as part of a network, where facilities are connected to one another -- and hospital pathogens potentially spread -- through the movement of patients between them. We sought to describe the hospital admission patterns of patients known to be colonised with carbapenemase-producing Enterobacterales (CPE), and compare them with CPE-negative patients. Methods We performed a linkage study in Victoria, Australia, including datasets with notifiable diseases (CPE notifications) and hospital admissions (admission dates and diagnostic codes) for the period 2011 to 2020. Where the CPE notification date occurred during a hospital admission for the same patient, we identified this as the `index admission'. We determined the number of distinct health services each patient was admitted to, and time to first admission to a different health service. We compared CPE-positive patients with four cohorts of CPE-negative patients, sampled based on different matching criteria. Results Of 528 unique patients who had CPE detected during a hospital admission, 222 (42\%) were subsequently admitted to a different health service during the study period. Among these patients, CPE diagnosis tended to occur during admission to a metropolitan public hospital (86\%, 190/222), whereas there was a greater number of metropolitan private (23\%, 52/222) and regional public (18\%, 39/222) hospitals for the subsequent admission. Median time to next admission was 4 days (IQR, 0-75 days). Admission patterns for CPE-positive patients was similar to the cohort of CPE-negative patients matched on index admission, time period, and age-adjusted Charlson comorbidity index. Conclusions Movement of CPE-positive patients between health services is not a rare event. While the most common movement is from one public metropolitan health service to another, there is also a trend for movement from metropolitan public hospitals into private and regional hospitals. CPE-positivity does not appear to impact on hospital admission frequency and timing. These findings support the potential utility of a centralised notification and outbreak management system for CPE positive patients.},
-  archiveprefix = {medRxiv},
-  copyright = {{\copyright} 2024, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NonCommercial-NoDerivs 4.0 International), CC BY-NC-ND 4.0, as described at http://creativecommons.org/licenses/by-nc-nd/4.0/},
-  langid = {english},
-  file = {/Users/mlyd0001/Zotero/storage/NI868BV2/Lydeamore et al. - 2024 - Carbapenemase-producing Enterobacterales colonisat.pdf}
+  month = jul,
+  journal = {Antimicrobial Resistance \& Infection Control},
+  volume = {13},
+  number = {1},
+  pages = {82},
+  issn = {2047-2994},
+  doi = {10.1186/s13756-024-01437-x},
+  urldate = {2024-07-30},
+  abstract = {Hospitals in any given region can be considered as part of a network, where facilities are connected to one another -- and hospital pathogens potentially spread -- through the movement of patients between them. We sought to describe the hospital admission patterns of patients known to be colonised with carbapenemase-producing Enterobacterales (CPE), and compare them with CPE-negative patient cohorts, matched on comorbidity information.},
+  file = {/Users/mlyd0001/Zotero/storage/HGQWBFXR/Lydeamore et al. - 2024 - Carbapenemase-producing enterobacterales colonisat.pdf;/Users/mlyd0001/Zotero/storage/MRQB9QKM/s13756-024-01437-x.html}
 }
+
 
 @article{lydeamoreEstimationForceInfection2020,
   title = {Estimation of the Force of Infection and Infectious Period of Skin Sores in Remote {{Australian}} Communities Using Interval-Censored Data},
