--- a/cv/index.qmd
+++ b/cv/index.qmd
@@ -189,9 +189,49 @@ Graduated with a double major in applied and pure mathematics
 
 ## {{<fa book>}} Publications
 
-::: {#refs}
+```{r}
+#| echo: false
+#| results: asis
 
-:::
+
+library(stringr)
+library(httr2)
+library(textutils)
+
+req <- request("https://api.zotero.org") |>
+    req_url_query(
+        v = 3,
+        include = "bib",
+        sort = "date",
+        style = "journal-of-ecology",
+        itemType = "journalArticle"
+    ) |>
+        req_headers(`Zotero-API-Key` = Sys.getenv("ZOTERO_API_KEY")) |>
+    req_url_path("users", "3027577", "publications", "items") |>
+    req_retry()
+
+resp <- req |> 
+    req_perform()
+
+a <- resp |> 
+    resp_body_json() |> 
+    purrr::map("bib") |> 
+    unlist() |>
+    #convert from HTML
+    HTMLdecode() |> 
+    # Convert html to markdown
+    str_remove_all("<div[^>]*>") |>
+    str_remove_all("<\\/div>") |> 
+    #replace itallics
+    str_replace_all("<\\/?i>", "*") |>
+    #remove line breaks???
+    str_remove_all("\\n") |>
+    # Bold my name 
+    str_replace("(Lydeamore, M\\. J\\.)", '**\\1**') |>
+    str_trim()
+
+cat(paste0("- ", a), sep="\n")
+```
 
 ## {{<fa money-bill>}} Funding
 
@@ -943,3 +983,4 @@ Including the Mathematical Biology Special Interest Group
 2015--
 :::
 :::: 
+ 
